# HistoSlice

./: .dockerignore  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  NOTICE.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  renovate.json
.github/: copilot-instructions.md  renovate.json
.github/workflows/: check.yaml  docker.yaml  docs.yaml  publish.yaml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: cli.md  index.md  metadata.md
docs/api/public/: datasets.md  outlierdetector.md  slidereader.md
histoprep/: _cli.py
histoslice/: _backend.py  _cli.py  _reader.py
histoslice/cli/: _app.py  _models.py  _options.py
histoslice/functional/: __init__.py  _concurrent.py  _dearray.py  _images.py  _mean_std.py  _metrics.py  _tissue.py
histoslice/utils/: _normalize.py  _process.py  _torch.py
scripts/: test-docker.sh
test_env_310/: pyvenv.cfg
tests/: _utils.py  backend_test.py  check_test.py  cli_app_test.py  cli_test.py  collage_test.py  conftest.py  dearray_test.py  level_test.py  mean_and_std_test.py  metadata_test.py  metrics_test.py  normalize_test.py  reader_test.py  thumbnail_downscale_test.py  tiles_test.py  tissue_test.py  torch_test.py
tests/data/: slide.tiff
