[project]
name = "histoslice"
version = "0.1.0"
description = "Read and process histological slide images with python!"
authors = [{ name = "Ryota Murai", email = "opensource@rmurai.com" }]
license = "MIT"
license-files = ["LICENSE", "NOTICE.md"]
keywords = [
    "histology",
    "slide",
    "image processing",
    "Whole Slide Imaging",
    "WSI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "aicspylibczi>=3,<4",
    "matplotlib",
    "mpire~=2.6",
    "numpy",
    "opencv-python-headless>=4,<5",
    "openslide-python~=1.2",
    "pillow>=10,<11",
    "polars>=0.16,<0.17",
    "rich-click~=1.6",
    "scikit-learn>=1,<2",
    "tqdm",
    "pyvips>=3,<4",
]

[project.urls]
Homepage = "https://github.com/rmuraix/HistoSlice"
Documentation = "https://lab.rmurai.com/HistoSlice/"
Repository = "https://github.com/rmuraix/HistoSlice.git"
Issues = "https://github.com/rmuraix/HistoSlice/issues"
Changelog = "https://github.com/rmuraix/HistoSlice/releases"

[project.scripts]
HistoSlice = "histoslice._cli:cut_slides"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.17",
    "mkdocstrings[python]>=0.30.0",
    "pytest",
    "pytest-console-scripts>=1.3.1,<2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
norecursedirs = "test/data/*"
addopts = "--doctest-modules --cov=histoslice --cov-branch --cov-report=xml"
script_launch_mode = "subprocess"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
