[project]
name = "histoslice"
version = "0.2.1"
description = "Read and process histological slide images with python!"
authors = [{ name = "Ryota Murai", email = "opensource@rmurai.com" }]
license = "MIT"
license-files = ["LICENSE", "NOTICE.md"]
keywords = [
    "histology",
    "slide",
    "image processing",
    "Whole Slide Imaging",
    "WSI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "aicspylibczi>=3,<4",
    "matplotlib",
    "mpire>=2.6",
    "numpy>=2",
    "opencv-python-headless>=4",
    "openslide-python>=1.4",
    "pillow>=10",
    "polars>=0.16",
    "scikit-learn>=1,<2",
    "tqdm>=4.66.0",
    "pyvips[binary]>=3.0.0",
    "openslide-bin>=4.0.0.2",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "pydantic>=2.10.0",
    "typer-di>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rmuraix/HistoSlice"
Documentation = "https://lab.rmurai.com/HistoSlice/"
Repository = "https://github.com/rmuraix/HistoSlice.git"
Issues = "https://github.com/rmuraix/HistoSlice/issues"
Changelog = "https://github.com/rmuraix/HistoSlice/releases"

[project.scripts]
histoslice = "histoslice.cli._app:main"

[dependency-groups]
dev = [
    "mkdocs-material==9.6.20",
    "mkdocstrings[python]==0.30.1",
    "pytest==8.4.2",
    "pytest-console-scripts==1.4.1",
    "pytest-cov==7.0.0",
    "ruff==0.13.2",
]

[tool.pytest.ini_options]
norecursedirs = "test/data/*"
addopts = "--doctest-modules --cov=histoslice --cov-branch --cov-report=xml"
script_launch_mode = "subprocess"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
